Web App Javascript CRUD.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>App Javascript</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/meuEstilo.css">
 </head>
 
 <body>
+    <div class="container">
+        <h2 class="heading">Crud APP JAVASCRIPT</h2>
 
+        <div class="addUsuario">
+            <div class="row">
+                <div class="col-md-12">
+                    <p>Adicionar Usuário</p>
+                </div>
+                <div class="col-md-10">
+                    <input type="text" class="form-control" id="data">
+                </div>
+                <div class="col-md-2">
+                    <button type="button" class="btn btn-primary" id="addUsuario" onclick="AddUsuario()">Adicionar Usuário</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <br>
+                    <p>Lista de Usuários</p>
+                </div>
+            </div>
+            <div class="usuario" id="usuarioLista">
+
+            </div>
+        </div>
+    </div>
+    <script src="js/principal.js"></script>
 </body>
 
 </html>
